# vision

./: .gitignore  README.md  config.py  main.py  pyproject.toml
app/: __init__.py  camera_preview.py  pose_renderer.py  yolo_person_preview.py
detectors/: __init__.py  yolo_person.py  yolo_pose_bytetrack.py
docs/: 0_hitos.md  0a_stack_equivalente.md  1_desarrollo.md  1b_.yolo.md  QUICKSTART_para_TS_devs.md  a0_tests_manuales.md  a1_tests_manuales.md  a2_tests_manuales.md  a3_tests_manuales.md  a4_tests_manuales.md  a5_tests_manuales.md  a6_tests_manuales.md
docs/c4/: README.md  c1_contexto.md  c2_contenedores.md  c3_componentes.md  c4_codigo.md  c4b_wiring_example.md
events/: __init__.py
models/: YoloClass.py  __init__.py  detections.py  pose_keypoint.py  tracked_person.py  yolo_class.py
services/: __init__.py
services/pipeline/: __init__.py  engine.py  interfaces.py  types.py
services/processors/: passthrough.py
services/providers/: mock_provider.py
services/renderers/: console.py
tests/: test_camera_preview.py  test_config.py  test_detection_models.py  test_main.py  test_pipeline.py  test_yolo_person_detector.py  test_yolo_pose_bytetrack.py
utils/: __init__.py
