[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-engine"
version = "0.1.0"
description = "Vision engine para deteccion local"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
vision-engine = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "models", "services", "detectors", "events", "utils"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
]
